# rindexer

./: Cargo.toml  docker-compose.yaml
migrations/: 20240518180503_blocks.sql
src/: main.rs
src/block/: block.rs  blocks_repository.rs  blocks_service.rs  mod.rs
