[package]
name = "rindexer"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
reqwest = { version = "0.12", features = ["json"] }
serde = "1.0.202"
serde_json = "1.0.117"
sqlx = { version = "0.7", features = [ "runtime-tokio", "tls-native-tls", "postgres" ] }
thiserror = "1.0.61"
tokio = { version = "1", features = ["full"] }
